--- a/scheduler/src/main/resources/templates/cert/FindId.html
+++ b/scheduler/src/main/resources/templates/cert/FindId.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <title>Bootstrap demo</title>
-    <link href="../static/css/bootstrap.min.css"
+    <link href="/static/css/bootstrap.min.css"
           rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
     <style>
         .container {
@@ -24,10 +24,6 @@
         }
         .board p {
             text-align: center;
-        }
-        .breadcrumb {
-            display: flex;
-            justify-content: center;
         }
         .field-error {
             border-color: #dc3545;
@@ -49,29 +45,24 @@
         <div class="py-2">
             <div class="board rounded-3 border border-2">
 
-                <h1> 관리자 로그인 </h1>
+                <h1> 아이디 찾기 </h1>
 
-                <label for="adminId"></label>
-                <input class="form-control" id="adminId" placeholder="아이디를 입력해주세요"
-                       th:errorclass="field-error" th:field="*{adminId}"
+                <label for="adminName"></label>
+                <input class="form-control" id="adminName" placeholder="이름을 입력해주세요"
+                       th:errorclass="field-error" th:field="*{adminName}"
                        type="text">
-                <div class="field-error" th:errors="*{adminId}"></div>
+                <div class="field-error" th:errors="*{adminName}"></div>
 
-                <label for="adminPassword"></label>
-                <input class="form-control" id="adminPassword" placeholder="비밀번호를 입력해 주세요"
-                       th:errorclass="field-error" th:field="*{adminPassword}"
+                <label for="adminEmail"></label>
+                <input class="form-control" id="adminEmail" placeholder="이메일을 입력해주세요"
+                       th:errorclass="field-error" th:field="*{adminEmail}"
                        type="text">
-                <div class="field-error" th:errors="*{adminPassword}"></div><br>
+                <div class="field-error" th:errors="*{adminEmail}"></div><br>
 
+                <div class="error-message"></div>
                 <div class="text-end">
-                    <button class="btn btn-primary" type="submit">로그인</button>
+                    <button class="btn btn-primary" type="submit">아이디 찾기</button>
                 </div><br><br>
-                    <nav aria-label="breadcrumb">
-                        <ol class="breadcrumb">
-                            <li class="breadcrumb-item"><a href="#">아이디 찾기</a></li>
-                            <li class="breadcrumb-item"><a href="#">비밀번호 찾기</a></li>
-                        </ol>
-                    </nav>
             </div>
         </div>
     </form>
